cabal-version:      2.4

name:        srm-hs
version:     0.1.0.0
synopsis:    Tool for securely deleting files
description: srm is a tool which securely deletes files by overwriting
             such files.
             .
             srm currently supports overwriting files using the GUTMANN
             method, OpenBSD's old "rm -P" process, a one-pass
             null-byte-based thing, and N passes of pseudorandom data.
             .
             srm aims to be well-documented, minimal, and overall very
             usable.

license:     BSD-3-Clause
author:      Varik Valefor
maintainer:  varikvalefor@aol.com
copyright:   (C) Varik Valefor 2021.  Basic rights reserved.

bug-reports: http://github.com/varikvalefor/srm-hs/issues
category:    File

executable srm
  ghc-options: -O2
  main-is: srm.hs
  other-modules:
    Base
    HighLevel.OverwriteRandomNTimes
    HighLevel.OverwriteOpenBSD
    HighLevel.OverwriteGutmann
    HighLevel.OverwriteSimple
  other-extensions:
    OverloadedStrings
  build-depends:
    base ^>=4.14.1.0,
    bytestring == 0.10.*,
    directory == 1.3.*,
    options == 1.2.*
  hs-source-dirs: src
  default-language: Haskell2010
